packages/apple-typedstream/tests/snapshots/fixtures__hello.snap
---
source: packages/apple-typedstream/tests/fixtures.rs
expression: value
---
Archived(
    ArchivedObject {
        classes: [
            Class {
                name: "NSAttributedString",
                version: 0,
            },
            Class {
                name: "NSObject",
                version: 0,
            },
        ],
        fields: [
            TypedValues {
                encoding: "@",
                values: [
                    String(
                        "Hello",
                    ),
                ],
            },
            TypedValues {
                encoding: "iI",
                values: [
                    I64(
                        1,
                    ),
                    U64(
                        5,
                    ),
                ],
            },
            TypedValues {
                encoding: "@",
                values: [
                    Map(
                        {
                            "__kIMMessagePartAttributeName": I64(
                                0,
                            ),
                        },
                    ),
                ],
            },
        ],
    },
)
