packages/apple-typedstream/tests/snapshots/fixtures__mention_name.snap
---
source: packages/apple-typedstream/tests/fixtures.rs
expression: value
---
Archived(
    ArchivedObject {
        classes: [
            Class {
                name: "NSAttributedString",
                version: 0,
            },
            Class {
                name: "NSObject",
                version: 0,
            },
        ],
        fields: [
            TypedValues {
                encoding: "@",
                values: [
                    String(
                        "@Name fixture mention test",
                    ),
                ],
            },
            TypedValues {
                encoding: "iI",
                values: [
                    I64(
                        1,
                    ),
                    U64(
                        26,
                    ),
                ],
            },
            TypedValues {
                encoding: "@",
                values: [
                    Map(
                        {
                            "__kIMMessagePartAttributeName": I64(
                                0,
                            ),
                        },
                    ),
                ],
            },
        ],
    },
)
